# salsa

./: .clangd  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  example_queue.json  main.cpp  package-lock.json  package.json  permutations.json  settings.ini  test.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: add-algorithm.md  pull-request.md
.github/workflows/: cmake-build-test.yml  cmake-multi-platform.yml  cmake-single-platform.yml  docker-image.yml  release.yml
docs/: CMakeLists.txt  custom.css  doxyfile.in  header.html  main_page.md
include/: BehaviourFactory.h  BehaviourTypes.h  DSPBehaviour.h  Drone.h  DroneConfiguration.h  DroneContactListener.h  DroneFactory.h  FlockingBehaviour.h  LevyFlockingBehaviour.h  ObjectTypes.h  PSOBehaviour.h  PheremoneBehaviour.h  RandWalkDisperseBehaviour.h  RayCastCallback.h  SwarmBehaviour.h  SwarmBehaviourRegistry.h  Tree.h  UniRandWalkBehaviour.h  UniformRandomWalkBehaviour.h  drone_configuration.h  drone_contact_listener.h  drone_factory.h  dsp_behaviour.h  flocking_behaviour.h  levy_flocking_behaviour.h  pheremone_behaviour.h  swarm_behaviour.h  swarm_behaviour_registry.h  target.h  tree.h  urw_behaviour.h
include/behaviours/: behaviour.h  dsp.h  flocking.h  levy_flocking.h  parameter.h  pheromone_avoidance.h  registry.h  uniform_random_walk.h
include/core/: data.h  entity.h  logger.h  map.h  sim.h  simulation.h  test_composite.h  test_queue.h  test_stack.h
include/drones/: drone.h  drone_factory.h
include/entity/: drone.h  drone_configuration.h  drone_factory.h  entity.h  target.h  target_factory.h
include/salsa/: salsa.h
include/salsa/behaviours/: behaviour.h  parameter.h  registry.h
include/salsa/core/: data.h  logger.h  map.h  sim.h  test_queue.h
include/salsa/entity/: drone.h  drone_configuration.h  drone_factory.h  entity.h  target.h  target_factory.h
include/salsa/utils/: base_contact_listener.h  collision_manager.h  object_types.h  raycastcallback.h
include/utils/: base_contact_listener.h  behaviour_registry.h  collision_manager.h  drone_configuration.h  drone_contact_listener.h  entity.h  object_types.h  raycastcallback.h  tree.h
src/: CMakeLists.txt  DSPBehaviour.cpp  Drone.cpp  FlockingBehaviour.cpp  LevyFlockingBehaviour.cpp  PSOBehaviour.cpp  PheremoneBehaviour.cpp  SwarmBehaviour.cpp  Tree.cpp  UniformRandomWalkBehaviour.cpp  dsp_behaviour.cpp  flocking_behaviour.cpp  levy_flocking_behaviour.cpp  main.cpp  pheremone_behaviour.cpp  swarm_behaviour.cpp  target.cpp  tree.cpp  urw_behaviour.cpp
src/behaviours/: behaviour.cpp  dsp.cpp  flocking.cpp  levy_flocking.cpp  pheromone_avoidance.cpp  uniform_random_walk.cpp
src/core/: data.cpp  logger.cpp  map.cpp  sim.cpp  test_queue.cpp  test_stack.cpp
src/drones/: drone.cpp
src/entity/: drone.cpp  drone_configuration.cpp  entity.cpp  target.cpp  target_factory.cpp
src/utils/: base_contact_listener.cpp  collision_manager.cpp  object_types.cpp  tree.cpp
test/: CMakeLists.txt  behaviour_registry_test.cpp  drone_test.cpp  mock_behaviour.h  mock_drone.h  parameter_test.cpp  sim_test.cpp  test_queue_test.cpp  test_stack_test.cpp
testbed/: CMakeLists.txt  draw.cpp  draw.h  imgui_logger.h  logger.cpp  logger.h  main.cpp  map.h  map_creator.cpp  queue_mode.cpp  run_sim.cpp  run_sim.h  sandbox_mode.cpp  settings.cpp  settings.h  swarm.cpp  swarm.h  test.cpp  test.h  testbed.cpp  testbed.h  user.cpp  user.h
testbed/behaviours/: dsp.cpp  dsp.h  flocking.cpp  flocking.h  levy_flocking.cpp  levy_flocking.h  pheromone_avoidance.cpp  pheromone_avoidance.h  uniform_random_walk.cpp  uniform_random_walk.h
testbed/maps/: circles.json  new_map.json  playground.json  poly.json  polygons.json  scatter.json  test.json  test2.json  tree_map.json
testbed/modes/: map_creator.cpp  queue_mode.cpp  sandbox_mode.cpp
testbed/plot/: plot.cpp  plot.h  plot.py  py_plot.py  table.py
testbed/targets/: tree.cpp  tree.h
testbed/tests/: DroneSwarmTest.cpp  drone_swarm_test.cpp
testbed/ui/: ui_builder.cpp  ui_builder.h  ui_component.h
testbed/ui/components/: add_test_modal.cpp  add_test_modal.h  add_test_permutation_modal.cpp  add_test_permutation_modal.h  base_modal_component.h  behaviour_settings_component.h  drone_configuration_component.h  graph_plotting_settings_compoment.h  sandbox_settings_component.h  test_queue_component.h  visual_settings_component.h
tests/: drone_test.cpp  sim_test.cpp  test_queue_test.cpp
